--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint configuration for Jumpei Ogawa (@phanect)'s private projects",
   "main": "config.js",
   "scripts": {
-    "test": "$(npm bin)/eslint ."
+    "test": "./test.sh"
   },
   "repository": {
     "type": "git",
