test: Deploy on tag, not merged to master, and include version existence test in deployment process
Since it is now removed from test.sh and there is only lint process in test.sh, test.sh is removed and lint process is directly written in circle.yml.

--- a/tslint-config/package.json
+++ b/tslint-config/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "config.js",
   "scripts": {
-    "test": "../test.sh"
+    "test": "npx eslint ."
   },
   "repository": {
     "type": "git",
