--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint configuration for Jumpei Ogawa (@phanect)'s private projects",
   "main": "config.js",
   "scripts": {
-    "test": "./test.sh"
+    "test": "npx eslint ."
   },
   "repository": {
     "type": "git",
