--- a/tslint-config/package.json
+++ b/tslint-config/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "config.js",
   "scripts": {
-    "test": "npx eslint ."
+    "test": "npx eslint .",
+    "build": "npx tsc ./config.ts"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/phanect/tslint-config-phanective/issues"
   },
-  "homepage": "https://github.com/phanect/tslint-config-phanective#readme"
+  "homepage": "https://github.com/phanect/tslint-config-phanective#readme",
+  "devDependencies": {
+    "typescript": "^2.5.2"
+  }
 }
