test: Add tslint.json & lint on CircleCI

--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ jobs:
       - run: yarn install
       - run: (cd tslint-config && yarn install && yarn run build)
       - run: npx eslint .
+      - run: npx tslint *.ts
 
       - deploy:
           command: |
