--- a/circle.yml
+++ b/circle.yml
@@ -24,42 +24,30 @@ jobs:
             if [[ -n "$CIRCLE_PULL_REQUEST" ]]; then
               #
               # If this build is pull request, check if `version` in package.json
-              # is bumped up correctly in case config.[js|ts] is/are updated.
+              # is bumped up correctly in case config.js is/are updated.
               #
 
-              # Check if config.[js|ts] is updated in this pull request
+              # Check if config.js is updated in this pull request
               CONFIG_UPDATED="false"
               PR_NUMBER="$(echo "$CIRCLE_PULL_REQUEST" | cut --delimiter="/" --fields=7)"
 
               MODIFIED_FILES="$(curl --silent "https://api.github.com/repos/phanect/eslint-config-phanective/pulls/${PR_NUMBER}/files" | jq --raw-output ".[] | .filename")"
 
               for MODIFIED_FILE in $MODIFIED_FILES; do
-                if [[ "$MODIFIED_FILE" = "eslint-config/config.js" ]]; then
-                  CONFIG_UPDATED="true"
-                  break;
-                fi
-
-                if [[ "$MODIFIED_FILE" = "tslint-config/config.ts" ]]; then
+                if [[ "$MODIFIED_FILE" = "config.js" ]]; then
                   CONFIG_UPDATED="true"
                   break;
                 fi
               done
 
-              # In case config.[js|ts] is/are updated, check if `version` in package.json is/are updated
+              # In case config.js is/are updated, check if `version` in package.json is updated
 
               if [[ "$CONFIG_UPDATED" = "true" ]]; then
-                check_version () {
-                  local linter="$1"
-
-                  NEW_VERSION="$(cat $HOME/eslint-config-phanective/$linter-config/package.json | jq --raw-output ".version")"
-                  if [[ -n "$(npm view "@phanect/$linter-config-phanective@$NEW_VERSION")" ]]; then
-                    echo -e "$RED@phanect/$linter-config-phanective@$NEW_VERSION already exists. Did you update version in package.json?$NC\n" > /dev/stderr
-                    exit 1
-                  fi
-                }
-
-                check_version "eslint"
-                check_version "tslint"
+                NEW_VERSION="$(cat $HOME/eslint-config-phanective/package.json | jq --raw-output ".version")"
+                if [[ -n "$(npm view "@phanect/eslint-config-phanective@$NEW_VERSION")" ]]; then
+                  echo -e "$RED@phanect/eslint-config-phanective@$NEW_VERSION already exists. Did you update version in package.json?$NC\n" > /dev/stderr
+                  exit 1
+                fi
               fi
             elif [[ "${CIRCLE_BRANCH}" = "master" ]]; then
               #
