--- a/circle.yml
+++ b/circle.yml
@@ -60,5 +60,7 @@ jobs:
               npm publish . --access public
             else
               echo "Something unexpected happened" > /dev/stderr
+              echo "\${CIRCLE_PULL_REQUEST}: \"${CIRCLE_PULL_REQUEST}\""
+              echo "\${CIRCLE_BRANCH}: \"${CIRCLE_BRANCH}\""
               exit 1
             fi
