chore: add npm script "clean"

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ESLint configuration for Jumpei Ogawa (@phanect)'s private projects",
   "main": "config.js",
   "scripts": {
-    "test": "npx eslint ."
+    "test": "npx eslint .",
+    "clean": "git clean -dX --force"
   },
   "repository": {
     "type": "git",
