feat: add eslint-plugin-vue

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "eslint-plugin-typescript": "latest",
+    "eslint-plugin-vue": "latest",
     "typescript-eslint-parser": "latest"
   },
   "devDependencies": {
