chore: move eslint from devDependencies to dependencies
Now eslint will be installed in the project using eslint-config-phanective

--- a/package.json
+++ b/package.json
@@ -17,11 +17,9 @@
     "node": ">=4.x"
   },
   "dependencies": {
+    "eslint": "latest",
     "eslint-plugin-typescript": "latest",
     "eslint-plugin-vue": "latest",
     "typescript-eslint-parser": "latest"
-  },
-  "devDependencies": {
-    "eslint": "latest"
   }
 }
