ci: use phanect/ci-javascript, the common CI image for JS projects

--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     working_directory: ~/eslint-config-phanective
     docker:
-      - image: phanect/ci-eslint-config-phanective
+      - image: phanect/ci-javascript
     steps:
       - run:
           name: System Update
