--- a/circle.yml
+++ b/circle.yml
@@ -57,8 +57,8 @@ jobs:
 
               echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > "$HOME/.npmrc"
               npm publish . --access public
-            else
-              echo "Something unexpected happened" > /dev/stderr
+            else # "${CIRCLE_PULL_REQUEST}" = "" && "${CIRCLE_BRANCH}" != "master"
+              echo "This job is run by neither pull request nor master branch." > /dev/stderr
               echo "\${CIRCLE_PULL_REQUEST}: \"${CIRCLE_PULL_REQUEST}\""
               echo "\${CIRCLE_BRANCH}: \"${CIRCLE_BRANCH}\""
               exit 1
