--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       # Test
       - checkout
       - run: yarn install
-      - run: npx eslint .
+      - run: yarn test
 
       - deploy:
           command: |
