--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
               CONFIG_UPDATED="false"
               PR_NUMBER="$(echo "$CIRCLE_PULL_REQUEST" | cut --delimiter="/" --fields=7)"
 
-              MODIFIED_FILES="$(curl --silent "https://api.github.com/repos/phanect/eslint-config-phanective/pulls/${PR_NUMBER}/files" | jq --raw-output ".[] | .filename")"
+              MODIFIED_FILES="$(curl -fsSL "https://api.github.com/repos/phanect/eslint-config-phanective/pulls/${PR_NUMBER}/files" | jq --raw-output ".[] | .filename")"
 
               for MODIFIED_FILE in $MODIFIED_FILES; do
                 if [[ "$MODIFIED_FILE" = "config.js" ]]; then
