--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@typescript-eslint/parser": "latest",
     "eslint": "latest",
     "eslint-plugin-editorconfig": "latest",
+    "eslint-plugin-import": "latest",
     "eslint-plugin-no-unsanitized": "latest",
+    "eslint-plugin-node": "latest",
+    "eslint-plugin-promise": "latest",
     "eslint-plugin-vue": "latest",
     "typescript": "latest"
   },
