--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 jobs:
   build:
-    working_directory: ~/eslint-config-phanective
+    working_directory: ~/eslint-plugin
     docker:
       - image: phanect/ci-javascript
     steps:
@@ -33,7 +33,7 @@ jobs:
               CONFIG_UPDATED="false"
               PR_NUMBER="$(echo "$CIRCLE_PULL_REQUEST" | cut --delimiter="/" --fields=7)"
 
-              MODIFIED_FILES="$(curl -fsSL "https://api.github.com/repos/phanect/eslint-config-phanective/pulls/${PR_NUMBER}/files" | jq --raw-output ".[] | .filename")"
+              MODIFIED_FILES="$(curl -fsSL "https://api.github.com/repos/phanect/eslint-plugin/pulls/${PR_NUMBER}/files" | jq --raw-output ".[] | .filename")"
 
               for MODIFIED_FILE in $MODIFIED_FILES; do
                 if [[ "$MODIFIED_FILE" = "config.js" ]]; then
@@ -45,9 +45,9 @@ jobs:
               # In case config.js is/are updated, check if `version` in package.json is updated
 
               if [[ "$CONFIG_UPDATED" = "true" ]]; then
-                NEW_VERSION="$(cat $HOME/eslint-config-phanective/package.json | jq --raw-output ".version")"
-                if [[ -n "$(npm view "@phanect/eslint-config-phanective@$NEW_VERSION")" ]]; then
-                  echo -e "$RED@phanect/eslint-config-phanective@$NEW_VERSION already exists. Did you update version in package.json?$NC\n" > /dev/stderr
+                NEW_VERSION="$(cat $HOME/eslint-plugin/package.json | jq --raw-output ".version")"
+                if [[ -n "$(npm view "@phanect/eslint-plugin@$NEW_VERSION")" ]]; then
+                  echo -e "$RED@phanect/eslint-plugin@$NEW_VERSION already exists. Did you update version in package.json?$NC\n" > /dev/stderr
                   exit 1
                 fi
               fi
