--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "eslint . && ./tests/run.sh",
     "clean": "git clean -dX --force",
+    "release": "yarn publish . --access public",
     "postinstall": "rm -f ./node_modules/@phanect/eslint-plugin && mkdir -p ./node_modules/@phanect && ln --symbolic ../../ ./node_modules/@phanect/eslint-plugin"
   },
   "repository": {
