fix(test): ignore incorrect test code by CLI option
Before this commit, incorrect test code are ignored by .eslintignore 
even it is tested by run.sh.
By specifying --ignore-pattern option, incorrect test code are now 
properly tested.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ESLint configuration for Jumpei Ogawa (@phanect)'s private projects",
   "main": "config.js",
   "scripts": {
-    "test": "eslint . && ./tests/run.sh",
+    "test": "eslint --ignore-pattern tests/ . && ./tests/run.sh",
     "clean": "git clean -dX --force",
     "release": "yarn publish . --access public"
   },
