refactor: use lodash.merge for Vue.js config

--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-vue": "latest",
+    "lodash.merge": "^4.6.1",
     "typescript": "latest"
-  },
-  "devDependencies": {
-    "lodash.merge": "^4.6.1"
   }
 }
