--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-no-unsanitized": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
+    "eslint-plugin-react": "latest",
     "eslint-plugin-vue": "latest",
     "lodash.merge": "^4.6.1",
     "typescript": "latest"
