--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "latest",
     "eslint-plugin-editorconfig": "latest",
     "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-no-unsanitized": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
