--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-vue": "latest",
+    "lodash.mergewith": "^4.6.2",
     "typescript": "latest"
   },
   "devDependencies": {
     "eslint-plugin-jest": "latest",
-    "jest": "^24.8.0",
-    "lodash.merge": "^4.6.1"
+    "jest": "^24.8.0"
   }
 }
