--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-node": "latest",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-vue": "latest",
     "lodash.clonedeep": "^4.5.0",
     "lodash.mergewith": "^4.6.2",
