refactor: load pre-built JSONs of ESLint configs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
       name: default
     steps:
       - init
+      - run: npm run build
       - run: yarn test
       - run: yarn run lint
       - run: npm publish --dry-run --access public --non-interactive
