chore: use npm instead of yarn

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
 
             sudo npm install --global npm
       - checkout
-      - run: yarn install
+      - run: npm install
 
 jobs:
   build:
@@ -26,8 +26,8 @@ jobs:
     steps:
       - init
       - run: npm run build
-      - run: yarn test
-      - run: yarn run lint
+      - run: npm test
+      - run: npm run lint
       - run: npm publish --dry-run --access public --non-interactive
 
   release:
@@ -37,7 +37,7 @@ jobs:
       - init
       - run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN" > "$HOME/.npmrc"
-          yarn release
+          npm release
 
 workflows:
   version: 2
