--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-jest": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-node": "latest",
+    "eslint-plugin-nuxt": "latest",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
