--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/builder.js",
     "test": "jest",
-    "lint": "eslint --ignore-pattern tests/ --ext=.js,.jsx,.ts,.tsx,.vue .",
+    "lint": "eslint --ignore-pattern tests/ --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue .",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public",
     "postinstall": "node ./scripts/postinstall.mjs"
