fix: download jest-resolver.js before tests

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "lib/config.js",
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/builder.js",
+    "pretest": "node ./scripts/pretest.mjs",
     "test": "jest",
     "lint": "eslint --ignore-pattern tests/ --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue .",
     "clean": "git clean -dX --force",
-    "release": "npm run build && npm publish . --access public",
-    "postinstall": "node ./scripts/postinstall.mjs"
+    "release": "npm run build && npm publish . --access public"
   },
   "repository": {
     "type": "git",
