--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phanect/eslint-plugin",
-  "version": "2022.1.30",
+  "version": "2022.1.30-1",
   "description": "ESLint configuration for Jumpei Ogawa (@phanect)'s private projects",
   "main": "lib/config.js",
   "scripts": {
