doc: update package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-phanective",
   "version": "2022.2.11",
-  "description": "ESLint configuration for Jumpei Ogawa (@phanect)'s private projects",
+  "description": "Personal ESLint configuration for Jumpei Ogawa (@phanect)",
   "main": "./plain.json",
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/builder.js",
