--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-import": "latest",
     "eslint-plugin-jest": "latest",
     "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-jsonc": "latest",
     "eslint-plugin-node": "latest",
     "eslint-plugin-nuxt": "latest",
     "eslint-plugin-promise": "latest",
