--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
+    "eslint-config-next": "latest",
     "eslint-plugin-document-write": "latest",
     "eslint-plugin-editorconfig": "latest",
     "eslint-plugin-import": "latest",
