--- a/package.json
+++ b/package.json
@@ -41,10 +41,7 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
-    "dirname-filename-esm": "^1.1.1",
-    "enhanced-resolve": "^5.8.3",
-    "jest": "^28.1.3",
-    "node-fetch": "^3.2.0"
+    "jest": "^28.1.3"
   },
   "peerDependencies": {
     "eslint": "^8.0.0"
