--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">=10.x"
   },
   "dependencies": {
+    "@nuxt/eslint-config": "^0.1.1",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eslint-config-next": "latest",
@@ -30,7 +31,6 @@
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-jsonc": "latest",
     "eslint-plugin-node": "latest",
-    "eslint-plugin-nuxt": "latest",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
