refactor: migrate to JSM

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eslint-config-phanective",
   "version": "2023.8.26",
   "description": "Personal ESLint configuration for Jumpei Ogawa (@phanect)",
+  "type": "module",
   "main": "./plain.json",
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/build.js",
