--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "./plain.json",
   "scripts": {
-    "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/build.js",
+    "build": "esno ./scripts/build.ts",
     "test": "vitest run",
-    "lint": "eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
+    "lint": "tsc --noEmit && eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public"
   },
@@ -42,7 +42,11 @@
   },
   "devDependencies": {
     "@phanect/utils": "^1.0.0",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/lodash.mergewith": "^4.6.9",
+    "@types/node": "^20.10.6",
     "eslint": "^8.0.0",
+    "esno": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   },
