--- a/package.json
+++ b/package.json
@@ -36,14 +36,25 @@
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-vue": "latest",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.mergewith": "^4.6.2",
-    "typescript": "latest"
+    "lodash.mergewith": "^4.6.2"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
-    "jest": "^28.1.3"
+    "eslint": "^8.0.0",
+    "jest": "^28.1.3",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "eslint": "^8.0.0"
+    "eslint": "^8.0.0",
+    "next": "*",
+    "typescript": "*"
+  },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": true
+    },
+    "typescript": {
+      "optional": true
+    }
   }
 }
