--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "deepmerge": "^4.3.1",
     "eslint": "^8.0.0",
     "esno": "^4.7.0",
+    "type-fest": "^4.18.2",
     "typescript": "^5.3.3",
     "vitest": "^2.0.2"
   },
