--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "eslint-plugin-document-write": "latest",
     "eslint-plugin-editorconfig": "latest",
     "eslint-plugin-import-x": "^0.5.0",
-    "eslint-plugin-jest": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-jsonc": "latest",
     "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vue": "latest"
   },
   "devDependencies": {
