feat: migrate to flat config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "extends": "@phanect/configs/tsconfig/nodejs",
+  "compilerOptions": {
+    "typeRoots": [
+      "./node_modules/@types/",
+      "./src/types/"
+    ]
+  },
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.mts" ],
   "exclude": [
     "tests/fixtures/invalid/*.js", // Invalid JS fixtures raises some ESLint errors, and it may cause type errors too.
