--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "2023.8.26",
   "description": "Personal ESLint configuration for Jumpei Ogawa (@phanect)",
   "main": "./plain.json",
+  "type": "module",
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/build.js",
-    "test": "jest",
-    "lint": "eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
+    "test": "vitest",
+    "lint": "tsc --noEmit && eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public"
   },
@@ -14,10 +15,11 @@
     "type": "git",
     "url": "git@github.com:phanect/eslint-plugin.git"
   },
-  "author": "Jumpei Ogawa",
+  "author": "Jumpei Ogawa (https://phanective.org)",
   "license": "CC0-1.0",
   "engines": {
-    "node": ">=10.x"
+    "node": ">=18.x",
+    "npm": ">=10.x"
   },
   "dependencies": {
     "@nuxt/eslint-config": "^0.1.1",
@@ -36,14 +38,28 @@
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-vue": "latest",
     "lodash.clonedeep": "^4.5.0",
-    "lodash.mergewith": "^4.6.2",
-    "typescript": "latest"
+    "lodash.mergewith": "^4.6.2"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
-    "jest": "^28.1.3"
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/lodash.mergewith": "^4.6.9",
+    "@types/node": "^20.10.6",
+    "eslint": "^8.0.0",
+    "typescript": "^5.3.3",
+    "unbuild": "^2.0.0",
+    "vitest": "^1.1.0"
   },
   "peerDependencies": {
-    "eslint": "^8.0.0"
+    "eslint": "^8.0.0",
+    "next": "*",
+    "typescript": "*"
+  },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": true
+    },
+    "typescript": {
+      "optional": true
+    }
   }
 }
