--- a/package.json
+++ b/package.json
@@ -36,15 +36,12 @@
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
-    "eslint-plugin-vue": "latest",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.mergewith": "^4.6.2"
+    "eslint-plugin-vue": "latest"
   },
   "devDependencies": {
     "@phanect/utils": "^1.0.0",
-    "@types/lodash.clonedeep": "^4.5.9",
-    "@types/lodash.mergewith": "^4.6.9",
     "@types/node": "^20.10.6",
+    "deepmerge": "^4.3.1",
     "eslint": "^8.0.0",
     "esno": "^4.7.0",
     "typescript": "^5.3.3",
