--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
-    "eslint-plugin-vue": "latest",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.mergewith": "^4.6.2"
+    "eslint-plugin-vue": "latest"
   },
   "devDependencies": {
     "@types/lodash.clonedeep": "^4.5.9",
