--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./plain.json",
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/build.js",
-    "test": "jest",
+    "test": "vitest run",
     "lint": "tsc --noEmit && eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public"
@@ -40,14 +40,13 @@
     "eslint-plugin-vue": "latest"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.6",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/lodash.mergewith": "^4.6.9",
     "@types/node": "^20.10.6",
     "deepmerge": "^4.3.1",
     "eslint": "^8.0.0",
-    "jest": "^28.1.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   },
   "peerDependencies": {
     "eslint": "^8.0.0",
