--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./plain.json",
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/build.js",
-    "test": "jest",
+    "test": "vitest run",
     "lint": "eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public"
@@ -41,10 +41,9 @@
   },
   "devDependencies": {
     "@phanect/utils": "^1.0.0",
-    "@types/jest": "^28.1.6",
     "eslint": "^8.0.0",
-    "jest": "^28.1.3",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   },
   "peerDependencies": {
     "eslint": "^8.0.0",
