TODO Check if this commit is needed
try running `npm run lint` and check if ESLint raises unfixable errors without this commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.mts" ],
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+
+    "./tests/configs.test.ts", // TODO Fix this file after ESLint 9 is released and flat config is GA.
   ]
 }
