test: do not type check invalid JS fixtures
Invalid TS files are still type-checked by tsc.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.mts" ],
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+    "tests/fixtures/invalid/*.js", // Invalid JS fixtures raises some ESLint errors, and it may cause type errors too.
   ]
 }
