--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-vitest": "latest",
     "eslint-plugin-vue": "latest"
   },
   "devDependencies": {
