doc: correct `repository.url` of package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:phanect/eslint-plugin.git"
+    "url": "git@github.com:phanect/eslint-config-phanective.git"
   },
   "author": "Jumpei Ogawa (https://phanective.org)",
   "license": "CC0-1.0",
