--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash.mergewith": "^4.6.2"
   },
   "devDependencies": {
+    "@phanect/utils": "^1.0.0",
     "@types/jest": "^28.1.6",
     "eslint": "^8.0.0",
     "jest": "^28.1.3",
