--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "node --trace-warnings --unhandled-rejections=strict ./scripts/build.js",
     "test": "jest",
-    "lint": "eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
+    "lint": "npm run lint:eslint && npm run lint:dprint",
+    "lint:eslint": "eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
+    "lint:dprint": "dprint check",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public"
   },
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "dprint": "^0.45.1",
     "jest": "^28.1.3"
   },
   "peerDependencies": {
