Revert "TODO Check if this commit is needed"
This reverts commit 19b07370ab4cda9364522a1dfabee41248c0c92d.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,6 @@
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.mts" ],
   "exclude": [
     "dist",
-    "node_modules",
-
-    "./tests/configs.test.ts", // TODO Fix this file after ESLint 9 is released and flat config is GA.
+    "node_modules"
   ]
 }
