chore: `build` before `test` & `lint`
Because I frequently forget to build before test and lint...

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "./plain.json",
   "scripts": {
     "build": "esno ./scripts/build.ts",
-    "test": "vitest run",
-    "lint": "tsc --noEmit && eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
+    "test": "npm run build && vitest run",
+    "lint": "npm run build && tsc --noEmit && eslint --ignore-path=.gitignore --ext=.js,.cjs,.mjs,.jsx,.ts,.tsx,.vue,.json,.json5 .",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public"
   },
