--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-jest": "latest",
     "eslint-plugin-jsdoc": "latest",
     "eslint-plugin-jsonc": "latest",
-    "eslint-plugin-node": "latest",
+    "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
