--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-promise": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-svelte": "^2.39.0",
     "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vue": "latest"
   },
@@ -51,10 +52,14 @@
   "peerDependencies": {
     "eslint": "^8.0.0",
     "next": "*",
+    "svelte": "*",
     "typescript": "*"
   },
   "peerDependenciesMeta": {
     "next": {
+      "optional": true
+    },
+    "svelte": {
       "optional": true
     },
     "typescript": {
