chore: add new npm script `fix`

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "esno ./scripts/build.ts",
     "test": "npm run build && vitest run",
     "lint": "npm run build && tsc --noEmit && eslint .",
+    "fix": "npm run build && eslint --fix .",
     "clean": "git clean -dX --force",
     "release": "npm run build && npm publish . --access public"
   },
